--- a/application/admin/view/home/index.html
+++ b/application/admin/view/home/index.html
@@ -1,1 +1,50 @@
 {extend name="public/admin_base"}
+
+{block name="page-main"}
+<div class="row">
+    <div class="col-xs-12">
+        <div class="well bordered-left bordered-themeprimary">
+            <h1 style="font-weight: 900!important;font-style: italic;text-shadow: 5px 5px 5px #ff0000;font-family: '新宋体'">
+                欢迎使用后台管理系统！
+            </h1>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <div class="well with-header with-footer">
+            <div class="header bg-themeprimary">
+                服务器信息
+            </div>
+            <table class="table table-hover table-bordered">
+                <thead>
+                    <tr>
+                        <th colspan="2">服务器信息</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>服务器域名</td>
+                        <td>{$Request.domain}/</td>
+                    </tr>
+                    <tr>
+                        <td>服务器IP地址</td>
+                        <td>{$Request.ip}</td>
+                    </tr>
+                    <tr>
+                        <td>服务器端口</td>
+                        <td>{$Request.port}</td>
+                    </tr>
+
+                    <tr>
+                        <td>联系邮箱</td>
+                        <td>lijianwzx@163.com</td>
+                    </tr>
+                </tbody>
+            </table>
+            <div class="footer"></div>
+        </div>
+       
+    </div>
+</div>
+{/block}
