--- a/application/admin/view/import/create_template_first.html
+++ b/application/admin/view/import/create_template_first.html
@@ -1,104 +1,107 @@
-{extend name="public/base"}
+{extend name="public/admin_base"}
 
 {block name="title"}导入模板文件{/block}
-
-                {block name="page-main"}
-                </ul>
-                <ul class="tablist">
-                    <li id='first-step-li' role="tab" class="first current" aria-disabled="false" aria-selected="true">
-                        <a id="formWizard-t-0" aria-controls="formWizard-p-0"><span class="current-info audible">current
-                                step: </span><span class="number">1</span> 编写方式</a>
-                    </li>
-                    <li id='second-step-li' role="tab" class="disabled" aria-disabled="true">
-                        <a id="formWizard-t-1" aria-controls="formWizard-p-1"><span class="number">2</span>内容添加</a>
-                    </li>
-                    <li id='third-step-li' role="tab" class="disabled last" aria-disabled="true">
-                        <a id="formWizard-t-2" aria-controls="formWizard-p-2"><span class="number">3</span>完成发布</a>
-                    </li>
-                </ul>
-                <div class="project-first-step">
-                    <form class="edit-project-info">
-                        <div class="form-group">
-                            <form id="uploadForm" enctype="multipart/form-data">
-                                <div class="form-inline">
-                                    <label for="tname" class="col-sm-2 control-label">模板名字</label>
-                                    <input type="text" class="form-control" id="tname">
-                                    <input type="text" class="form-control" name="fileBrowserInput"
-                                        id="fileBrowserInput" readonly="readonly">
-                                    <input type="file" class="hidden" id="tempalteFile">
-                                    <div class="input-group">
-                                        <input type="button" id="fileBrowser" value="选择文件">
-                                    </div>
-                                    <input type="button" value="提交" id="subFile">
-                                    <a href="{:url('excel/Import/createTemplateSecond')}" id="project-first-btn"
-                                        style="float: right;" class="btn btn-info">下一步</a>
+{block name="page-style"}
+<link href="__CSS__/mysite.css" rel="stylesheet">{/block}
+{block name="page-main"}
+<div class="container project-team-container">
+    <div class="row">
+        <div class="col-lg-9">
+            <ul class="tablist">
+                <li id='first-step-li' role="tab" class="first current" aria-disabled="false" aria-selected="true">
+                    <a id="formWizard-t-0" aria-controls="formWizard-p-0"><span class="current-info audible">current
+                            step: </span><span class="number">1</span> 编写方式</a>
+                </li>
+                <li id='second-step-li' role="tab" class="disabled" aria-disabled="true">
+                    <a id="formWizard-t-1" aria-controls="formWizard-p-1"><span class="number">2</span>内容添加</a>
+                </li>
+                <li id='third-step-li' role="tab" class="disabled last" aria-disabled="true">
+                    <a id="formWizard-t-2" aria-controls="formWizard-p-2"><span class="number">3</span>完成发布</a>
+                </li>
+            </ul>
+            <div class="project-first-step">
+                <form class="edit-project-info">
+                    <div class="form-group">
+                        <form id="uploadForm" enctype="multipart/form-data">
+                            <div class="form-inline">
+                                <label for="tname" class="col-sm-2 control-label">模板名字</label>
+                                <input type="text" class="form-control" id="tname">
+                                <input type="text" class="form-control" name="fileBrowserInput" id="fileBrowserInput"
+                                    readonly="readonly">
+                                <input type="file" class="hidden" id="tempalteFile">
+                                <div class="input-group">
+                                    <input type="button" id="fileBrowser" class="btn btn-default" value="选择文件">
                                 </div>
-                            </form>
-                        </div>
-
-                    </form>
-                </div>
+                                <input type="button" class="btn btn-info" value="提交" id="subFile">
+                            </div>
+                        </form>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 {/block}
 
 {block name="page-js"}
-    <script type="application/javascript">
+<script type="application/javascript">
 
-        $("#fileBrowser").click(function () {
-            $("#tempalteFile").val("");
-            $("#tempalteFile").click();
-            $("#tempalteFile").change(function () {
-                CheckFile(this)
-                // console.log($("#tempalteFile").val());
-                $("#fileBrowserInput").val($("#tempalteFile").val())
-            });
-        })
-        //文件上传验证.
-        function CheckFile(obj) {
-            var array = new Array('xls', 'xlsx'); //可以上传的文件类型 
-            if (obj.value == '') {
-                showMsg("选择要上传的文件!");
+    $("#fileBrowser").click(function () {
+        $("#tempalteFile").val("");
+        $("#tempalteFile").click();
+        $("#tempalteFile").change(function () {
+            CheckFile(this)
+            // console.log($("#tempalteFile").val());
+            $("#fileBrowserInput").val($("#tempalteFile").val())
+        });
+    })
+    //文件上传验证.
+    function CheckFile(obj) {
+        var array = new Array('xls', 'xlsx'); //可以上传的文件类型 
+        if (obj.value == '') {
+            showMsg("选择要上传的文件!");
+            return false;
+        }
+        else {
+            var fileContentType = obj.value.match(/^(.*)(\.)(.{1,8})$/)[3];
+            var isExists = false;
+            for (var i in array) {
+                if (fileContentType.toLowerCase() == array[i].toLowerCase()) {
+                    isExists = true;
+                    return true;
+                }
+            }
+            if (isExists == false) {
+                obj.value = null;
+                showErrorMsg("上传文件类型不正确,必须为.xls或.xlsx!");
                 return false;
             }
-            else {
-                var fileContentType = obj.value.match(/^(.*)(\.)(.{1,8})$/)[3];
-                var isExists = false;
-                for (var i in array) {
-                    if (fileContentType.toLowerCase() == array[i].toLowerCase()) {
-                        isExists = true;
-                        return true;
+        }
+    }
+
+    $("#subFile").click(function () {
+        var file = document.getElementById("tempalteFile")
+        if (CheckFile(file) === true) {
+            var fd = new FormData();
+            fd.append("tempalte", $("#tempalteFile").get(0).files[0]);
+            fd.append("tname", $("#tname").val())
+            $.ajax({
+                method: "post",
+                url: "{:url('admin/import/upload')}",
+                data: fd,
+                cache: false,
+                processData: false,
+                contentType: false,
+                success: function (data) {
+                    if (data.code == 1) {
+                        showMsgAndHref(data);
+                    } else {
+                        showErrorMsg(data.msg)
                     }
                 }
-                if (isExists == false) {
-                    obj.value = null;
-                    showErrorMsg("上传文件类型不正确,必须为.xls或.xlsx!");
-                    return false;
-                }
-            }
+            })
         }
 
-        $("#subFile").click(function () {
-            var file = document.getElementById("tempalteFile")
-            if (CheckFile(file) === true) {
-                var fd = new FormData();
-                fd.append("tempalte", $("#tempalteFile").get(0).files[0]);
-                fd.append("tname", $("#tname").val())
-                $.ajax({
-                    method: "post",
-                    url: "{:url('excel/import/upload')}",
-                    data: fd,
-                    cache: false,
-                    processData: false,
-                    contentType: false,
-                    success: function (data) {
-                        if (data.code == 1) {
-                            showMsg(data.msg);
-                        } else {
-                            showErrorMsg(data.msg)
-                        }
-                    }
-                })
-            }
-
-        })
-    </script>
+    })
+</script>
 {/block}
